navbar gap fix

--- a/style.css
+++ b/style.css
@@ -233,9 +233,6 @@ body{
         }
     }
 }
-.has-navbar {
-    margin-bottom: calc(92px + 0.5em);
-}
 
 /* Menu Page */
 .menu-header{
